[tool.poetry]
name = "logical"
version = "0.1.0"
description = "A logic engine that processes English logical statements into Prolog."
authors = ["Jonathan Hendler <jonathan.hendler@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
openai = "1.30.1"
pyswip = "0.2.10"
pendulum = "2.1.2"
folpy = "0.1.0"

[tool.poetry.dev-dependencies]
black = "*"
ipython = "*"
python-dotenv = "*"
invoke = "*"

[tool.poetry.packages]
include = [{ from = "logical", include = ["*.py"] }]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
